--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="cover bg-image"><img src="images/header-background.jpg" />
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(2px);">
                 <div class="text-center p-5">
-                  <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/avatarr.jpg" width="160"
+                  <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/avatarr.JPG" width="160"
                       height="160" /></div>
                   <div class="header-bio mt-3">
                     <div data-aos="zoom-in" data-aos-delay="0">
@@ -320,7 +320,7 @@
           <div class="portfolio-section">
             <h2 class="h2 fw-light mb-4">Hobbies</h2>
             <div class="row g-0">
-              <div class="col-md-6"><img class="img-fluid" src="images/1.jpg" width="800" height="500" /></div>
+              <div class="col-md-6"><img class="img-fluid" src="images/1.JPG" width="800" height="500" /></div>
               <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
                 <div class="m-4 mt-md-2">
                   <p class="text-teal text-small">Vietnam / German / Switzerland / all over the world</p>
@@ -340,11 +340,11 @@
                 </div>
               </div>
               <div class="col-md-6"><img class="img-fluid"
-                    src="images/2.jpg" width="800" height="500" /></div>
+                    src="images/2.JPG" width="800" height="500" /></div>
             </div>
             <div class="row g-0">
               <div class="col-md-6"><img class="img-fluid"
-                    src="images/3.jpg" width="800" height="500" /></div>
+                    src="images/3.JPG" width="800" height="500" /></div>
               <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
                 <div class="m-4 mt-md-2">
                   <p class="text-teal text-small">Prison break / Friends / other film </p>
