--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                 <div class="d-flex mb-2">
                   <div class="avatar"><img src="images/IMG_6345.JPG" width="60" height="60" /></div>
                   <div class="header-bio m-3 mb-0">
-                    <h3 class="h6 mb-1" data-aos="fade-left" data-aos-delay="0">Dode</h3>
-                    <p class="text-muted text-small" data-aos="fade-left" data-aos-delay="100"> Unknown
+                    <h3 class="h6 mb-1" data-aos="fade-left" data-aos-delay="0">Bachhihi</h3>
+                    <p class="text-muted text-small" data-aos="fade-left" data-aos-delay="100"> TungChi's Boss
                     </p>
                   </div>
                 </div>
